# Image-Classification-with-MLP

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  tests.cpp
